# pntr_app

./: .gitignore  .gitmodules  ADVANCED.md  CMakeLists.txt  README.md  RECIPES.md  index.data  index.html  index.js  index.wasm  package.json
.github/workflows/: pntr_app.yml
assets/: README.md
cmake/: FindRSGL.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL3.cmake  FindSDL3_mixer.cmake  Findlibretro.cmake  Findminiaudio.cmake  Findminifb.cmake  Findpntr.cmake  Findraudio.cmake  Findraylib.cmake  Findretro.cmake  Findrgfw.cmake
docs/: README.md  index.html  pntr_app_example.data  pntr_app_example.mjs
example/: CMakeLists.txt  Makefile.common  Makefile.libretro  pntr_app_example.c  pntr_app_example.html
examples/: CMakeLists.txt  pntr_app_example.c  shell.html
include/: pntr_app.c  pntr_app.h  pntr_app_cli.h  pntr_app_emscripten.h  pntr_app_libretro.h  pntr_app_minifb.h  pntr_app_nosound.h  pntr_app_platform.h  pntr_app_raylib.h  pntr_app_rgfw.h  pntr_app_rsgl.h  pntr_app_sdl.h  pntr_app_web.h
include/extensions/: pntr_app_libretro_vfs.h  pntr_app_miniaudio.h  pntr_app_random_stdlib.h  pntr_app_raudio.h
include/sound/: pntr_app_miniaudio.h
test/: CMakeLists.txt  pntr_app_test.c
